Related: tdf#75171 wrong "italic" happens on importing MathML

As of 4f294a90877d2f91bb88c7d6cd5b74e8e546a025, a SmTextNode can be
the sole child of a SmLineNode without being wrapped in a SmExpressionNode.

Change-Id: I3779eb90e216a70566c1151a9b8cb91a9fa36519